[package]
name = "github_org_member_saml_list"
version = "0.1.0"
authors = ["Noritada Kobayashi <noritada.kobayashi@wni.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "^3.0.0-beta.1"
console = "0.12"
csv = "1.1"
envy = "^0.3"
graphql_client = "0.9"
reqwest = "^0.9"
serde = "^1.0"
serde_json = "^1.0"
