[package]
name = "ghoast"
version = "0.1.0"
authors = ["Noritada Kobayashi <noritada.kobayashi@wni.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "^3.0.0-beta.1"
console = "0.14"
csv = "1.1"
envy = "^0.4"
graphql_client = "0.10"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = "^1.0"
serde_json = "^1.0"
